--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+		<script src="https://www.paypal.com/sdk/js?client-id=AcWGtGbawa4vlC-7QUjFUTmeWkkmY8yByMLSE1l2usF8Av57k9Wq2oJ80f1HW6w5Dxof6Vy010IZnz3t&currency=USD"></script>
 
 		<title>Bus Express</title>
 	</head>
